--- a/Node.js/기초문법2.md
+++ b/Node.js/기초문법2.md
@@ -21,3 +21,24 @@ b = 1;          // 1
 
 const c;        // Uncaught SyntaxError: Missing initializer in const declaration
 ```
+___
+### 템플릿 문자열
+- 문자열을 백틱( ` )으로 감싸서 사용
+- 문자열 안에 변수 삽입 가능
+```js
+// 기존 방식
+var num1 = 1;
+var num2 = 2;
+var result = 3;
+var string1 = num1 + ' 더하기 ' + num2 + '는 \'' + result + '\'';
+console.log(string1);   // 1 더하기 2는 '3'
+```
+```js
+// 백틱( ` ) 사용
+const num3 = 1;
+const num4 = 2;
+const result2 = 3;
+const string2 = `${num3} 더하기 ${num4}는 '${result2}'`;
+console.log(string2);   // 1 더하기 2 는 '3'
+```
+___
