Node.js 기초문법 Update
객체 리터럴

--- a/Node.js/기초문법2.md
+++ b/Node.js/기초문법2.md
@@ -42,3 +42,37 @@ const string2 = `${num3} 더하기 ${num4}는 '${result2}'`;
 console.log(string2);   // 1 더하기 2 는 '3'
 ```
 ___
+### 객체 리터럴
+- 객체의 속성명을 동적으로 생성
+- 코드를 줄이기 유용함
+```js
+// 기존 방식
+var sayNode = function(){
+    console.log('Node');
+};
+var es = 'ES';
+var oldObject = {
+    sayJS: funtion(){
+        console.log('JS');
+    },
+    sayNode: sayNode,
+};
+oldObject[es + 6] = 'Fantastic';
+
+oldObject.sayNode();        // Node
+oldObject.sayJS();          // JS
+console.log(oldObject.ES6); // Fantastic
+```
+```js
+// 신규 방식
+const newObject = {
+    sayJS(){
+        console.log('JS');
+    },
+    sayNode,
+    [es + 6]: 'Fantastic',
+};
+newObject.sayNode();        // Node
+newObject.sayJS();          // JS
+console.log(newObject.ES6); // Fantastic
+```
