--- a/Node.js/기초문법2.md
+++ b/Node.js/기초문법2.md
@@ -1,4 +1,5 @@
 # Node.js 기초문법 2
+알아야 하는 Javascript
 ### const, let
 *var* 와 차이점: var 와 달리 *const*, *let*은 블록이 끝나면 소멸
 ```js
@@ -52,7 +53,7 @@ var sayNode = function(){
 };
 var es = 'ES';
 var oldObject = {
-    sayJS: funtion(){
+    sayJS: function(){
         console.log('JS');
     },
     sayNode: sayNode,
@@ -76,3 +77,24 @@ newObject.sayNode();        // Node
 newObject.sayJS();          // JS
 console.log(newObject.ES6); // Fantastic
 ```
+___
+### 화살표 함수
+- *fucntion* 대신 => 기호로 함수 선언
+- *return* 단축 가능
+- 함수를 변수에 대입 후 재사용 가능
+```js
+// 아래 함수는 모두 기능이 같음
+
+// 기존 함수
+fucntion add1(x, y){
+    return x + y;
+}
+
+// 화살표 함수
+const add2 = (x, y) => {
+    return x + y;
+}
+// return 단축
+const add 3 = (x, y) => x + y;
+```
+___
